syntax = "proto3";

package contacts;

service ContactsManager {
  rpc AddPerson (AddPersonRequest) returns (AddPersonResponse);
  rpc GetPerson (GetPersonRequest) returns (GetPersonResponse);
}

enum PhoneType {
  MOBILE = 0;
  HOME = 1;
  WORK = 2;
}

message PhoneNumber {
  string number = 1;
  PhoneType type = 2;
}

message AddPersonRequest {
  string name = 1;
  string email = 2;
  repeated PhoneNumber phone = 3;
}

message AddPersonResponse {
  string id = 1;
}

message GetPersonRequest {
  string id = 1;
}

message GetPersonResponse {
  string name = 1;
  string id = 2;
  string email = 3;
  repeated PhoneNumber phone = 4;
}
